--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,29 @@
-annotated-types==0.7.0
-anyio==4.9.0
-atproto==0.0.60
-beautifulsoup4==4.13.3
+attrs==25.3.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
-click==8.1.8
-cryptography==44.0.2
-dnspython==2.7.0
-feedparser==6.0.11
-grapheme==0.6.0
+curl_cffi==0.10.0
+ffmpeg==1.4
+greenlet==3.1.1
 h11==0.14.0
-httpcore==1.0.8
-httpx==0.28.1
 idna==3.10
-libipld==3.0.1
+isodate==0.7.2
+lxml==5.3.1
+outcome==1.3.0.post0
+playwright==1.51.0
+pycountry==24.6.1
 pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
+pycryptodome==3.22.0
+pyee==12.1.1
+PySocks==1.7.1
 requests==2.32.3
-sgmllib3k==1.0.0
 sniffio==1.3.1
-soupsieve==2.6
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-uniseg==0.10.0
-urllib3==2.4.0
-websockets==13.1
-yt-dlp==2025.6.9
+sortedcontainers==2.4.0
+streamlink==7.1.3
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.13.1
+urllib3==2.3.0
+websocket-client==1.8.0
+wsproto==1.2.0
+yt-dlp==2025.4.30
